fix(frame): Fix fcc-test-frame on firefox
I used an alternative to display: none; to allow Firefox to properly run
challenge tests

Closes #10749

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -126,6 +126,13 @@ h1, h2, h3, h4, h5, h6, p, li {
   margin: 2px;
 }
 
+.hide-test-frame {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+  visibility: hidden;
+}
+
 .landing-icon {
   height: 200px;
   width: 200px;
